--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
+    "motion": "^12.23.18",
     "next": "15.5.3",
+    "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
     "react": "19.1.0",
